<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="4"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/tbtnekle"
        android:orderInCategory="0"
        android:title="@string/tbtnekle"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_add"/>
    <item
        android:id="@+id/tarih"
        android:orderInCategory="1"
        android:title="@string/tbtntarih"
        android:icon="@android:drawable/ic_menu_my_calendar"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/dersEkle"
        android:orderInCategory="2"
        android:title="@string/tbtndersEkle"
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/paylas"
        android:orderInCategory="3"
        android:title="@string/tbtnpaylas"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/hakkinde"
        android:orderInCategory="5"
        android:title="@string/tbtnhakkinda"
        app:showAsAction="never" />
</menu>
